[flake8]
doctests = yes
max-line-length = 80
ignore = E127,E128,E226,E401,E501
# E127: continuation line over-indented for visual indent
# E128: continuation line under-indented for visual indent
# E226: missing whitespace around arithmetic operator
# E401: multiple imports on one line

[tool:pytest]
python_files = imgdiff.py tests.py
python_functions = !test_suite
addopts = --doctest-modules --ignore=setup.py

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[zest.releaser]
python-file-with-version = imgdiff.py
